<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    tools:context=".ui.login.MainActivity">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="8dp"
        android:hint="@string/masukkan_email"
        android:background="@drawable/style_edit_text"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="8dp"
        android:hint="@string/masukkan_password"
        android:background="@drawable/style_edit_text"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_button_enable"
        android:text="@string/login"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/belum_memiliki_akun_register_sekarang"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"/>

</LinearLayout>