<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_story"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp">
        <ImageView
            android:id="@+id/iv_story"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_launcher_background"
            android:scaleType="fitXY"
            android:contentDescription="@string/image" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@id/cv_story"
        android:layout_marginTop="10dp"
        android:elevation="4dp"
        android:translationZ="4dp"
        app:cardCornerRadius="10dp">
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="5dp"
            android:textStyle="bold"
            android:text="@string/username"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_deskripsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_below="@id/cv_name"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/black"
        android:text="@string/deskripsi"/>

</RelativeLayout>